# robot_navigator

turtle_nav_ws/install/: local_setup.sh  setup.sh
turtle_nav_ws/install/turtle_navigator/lib/turtle_navigator/: navigator_controller  waypoint_commander
turtle_nav_ws/install/turtle_navigator/share/turtle_navigator/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
turtle_nav_ws/install/turtle_navigator/share/turtle_navigator/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  ament_cmake_export_targets-extras.cmake  export_turtle_navigator__rosidl_generator_cExport-noconfig.cmake  export_turtle_navigator__rosidl_generator_cppExport.cmake  export_turtle_navigator__rosidl_typesupport_fastrtps_cExport-noconfig.cmake  export_turtle_navigator__rosidl_typesupport_fastrtps_cExport.cmake  export_turtle_navigator__rosidl_typesupport_fastrtps_cppExport-noconfig.cmake  rosidl_cmake-extras.cmake  rosidl_cmake_export_typesupport_libraries-extras.cmake  rosidl_cmake_export_typesupport_targets-extras.cmake  turtle_navigatorConfig-version.cmake  turtle_navigatorConfig.cmake  turtle_navigator__rosidl_typesupport_cExport.cmake  (+5 more)
turtle_nav_ws/log/: latest_build
turtle_nav_ws/src/turtle_navigator/: CMakeLists.txt  package.xml  setup.py
turtle_nav_ws/src/turtle_navigator/scripts/: navigator_controller.py  waypoint_commander.py
turtle_nav_ws/src/turtle_navigator/srv/: ClearWaypoints.srv
(+114 files in other folders)
